--- a/views/index.pug
+++ b/views/index.pug
@@ -1,15 +1,12 @@
 html
   head
+    meta(charset="utf-8")
+    meta(name="viewport" content="width=device-width, initial-scale=1")
+  
     link(href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous")
+    
     title WebDeals
+    nav(class="navbar navbar-expand-lg navbar-light bg-light")
+      a(class="navbar-brand" href="/") WebDeals
   body
-    h1 Welcome to WebDeals
-    div(class="row row-cols-1 row-cols-md-2 g-4")
-      each product in products
-        div(class="card" style="width: 18rem;")
-          img(src=product["img"] class="card-img-top" alt="Product image")
-          div(class="card-body")
-            h5(class="card-title")= product["name"]
-            p(class="card-text")= product["price"]
-            a(href=product["url"] class="btn btn-primary") Visit site
-        
+    block content
