add simple scraper CLI

--- a/views/products.pug
+++ b/views/products.pug
@@ -4,17 +4,20 @@ block content
   div(class="container")
     form
       div(class="input-group")
-        input(type="search" class="form-control" name="query" placeholder="Search...")
+        input(type="search" class="form-control" name="query" placeholder="Search..." value=searchValue)
         button(class="btn btn-outline-secondary" type="submit")
           svg(xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16")
             path(d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z")
         
-    div(class="row row-cols-1 row-cols-md-4 g-4")
-      each product in products
-        div(class="card")
-          img(src=product.img class="card-img-top" alt="Product image")
-          div(class="card-body")
-            h5(class="card-title")= product.name
-            p(class="card-text")= product.price
-          div(class="card-footer")
-            a(href=product.url class="btn btn-primary" target="_blank") Visit site
+    if products.length > 0
+      div(class="row row-cols-1 row-cols-md-4 g-4")
+        each product in products
+          div(class="card")
+            img(src=product.img class="card-img-top" alt="Product image")
+            div(class="card-body")
+              h5(class="card-title")= product.name
+              p(class="card-text")= product.price
+            div(class="card-footer")
+              a(href=product.url class="btn btn-primary" target="_blank") Visit site
+    else
+      h3(class="text-center") No products found
